[gd_scene load_steps=8 format=3 uid="uid://clkft7lmulwyp"]

[ext_resource type="Script" path="res://Turret/Turret.gd" id="1_phglx"]
[ext_resource type="Texture2D" uid="uid://c12f7gn5pr2tg" path="res://assets/hive.png" id="2_kmvfg"]
[ext_resource type="Texture2D" uid="uid://dyks81ufuju8u" path="res://assets/beeP1.png" id="3_yg4b2"]
[ext_resource type="Texture2D" uid="uid://cjbftyyaqjqyl" path="res://assets/beeP2.png" id="4_l1lbv"]
[ext_resource type="AudioStream" uid="uid://bxfd0hg7xkcxi" path="res://assets/stinger.mp3" id="5_ugttx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1xb5"]
size = Vector2(47, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_q6quo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_yg4b2")
}, {
"duration": 1.0,
"texture": ExtResource("4_l1lbv")
}],
"loop": true,
"name": &"flapping",
"speed": 3.0
}]

[node name="Turret" type="Area2D"]
script = ExtResource("1_phglx")

[node name="TurretBody" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_x1xb5")

[node name="ShootTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.411765, 0.14902, 0.756863, 1)
offset_left = -22.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -33.0
max_value = 3.0
step = 1.0
show_percentage = false

[node name="BeeAnim" type="Timer" parent="."]

[node name="Turret" type="Node2D" parent="."]

[node name="Bee" type="AnimatedSprite2D" parent="Turret"]
visible = false
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_q6quo")
animation = &"flapping"

[node name="Hive" type="Sprite2D" parent="Turret"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_kmvfg")

[node name="Stinger" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ugttx")
volume_db = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="BeeAnim" to="." method="_on_bee_anim_timeout"]
[connection signal="texture_changed" from="Turret/Hive" to="." method="_on_turret_texture_changed"]
